methods.picture.MethodsPicture.scala.error
Compilation error:
MethodsPicture:3: error: ':' expected but ')' found.
def peindre(c) {
             ^MethodsPicture:16: error: identifier expected but '}' found.
} 
^